# Crisma-C-

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qrc_styles.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
main_autogen/: deps  mocs_compilation.cpp
main_autogen/3ITBSYFC75/: moc_InformationHolder.cpp  moc_InformationHolder.cpp.d  moc_ItemCard.cpp  moc_ItemCard.cpp.d  moc_OriginalCard.cpp  moc_OriginalCard.cpp.d  moc_Transparent2DLayer.cpp  moc_Transparent2DLayer.cpp.d
main_autogen/D4WTUAT6BE/: moc_Inventory.cpp  moc_Inventory.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_OriginalCard.cpp  moc_OriginalCard.cpp.d
main_autogen/MY5FTBMYDX/: moc_InformationHolder.cpp  moc_InformationHolder.cpp.d  moc_ItemCard.cpp  moc_ItemCard.cpp.d  moc_Transparent2DLayer.cpp  moc_Transparent2DLayer.cpp.d
main_autogen/WA22N3RULB/: moc_HorizontalScrollArea.cpp  moc_HorizontalScrollArea.cpp.d  moc_InventoryCard.cpp  moc_InventoryCard.cpp.d  moc_OriginalCard.cpp  moc_OriginalCard.cpp.d
main_autogen/include/: main.moc  main.moc.d
src/: main.cpp
src/Classes/: Item.cpp  Item.h
src/Database/SQLDatabase/: Database.db
src/Functions/: DatabaseFunctions.cpp  DatabaseFunctions.h  mainFIleFunctions.h  mainFileFunctions.cpp
src/Interfaces/: MainWindow.cpp  MainWindow.h
src/Widgets/ItemCard/: InformationHolder.cpp  InformationHolder.h  ItemCard.cpp  ItemCard.h  Transparent2DLayer.cpp  Transparent2DLayer.h
src/Widgets/WindowCard/: HorizontalScrollArea.cpp  HorizontalScrollArea.h  InventoryCard.cpp  InventoryCard.h  OriginalCard.cpp  OriginalCard.h
styles/: dark.qss  styles.qrc.depends
